--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -2,7 +2,7 @@ apiVersion: "nais.io/v1alpha1"
 kind: "Application"
 metadata:
    name: sykepengebehandling
-   namespace: helse
+   namespace: default
 spec:
    image: navikt/helse-sykepengebehandling:3
    port: 8080
