--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -3,6 +3,8 @@ kind: "Application"
 metadata:
    name: sykepengebehandling
    namespace: default
+   labels:
+      team: teamhelse
 spec:
    image: navikt/helse-sykepengebehandling:5
    port: 8080
