--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -20,6 +20,13 @@ spec:
          path: isready
          initialDelay: 20
          timeout: 1
+    resources:
+      limits:
+        cpu: 2000m
+        memory: 512Mi
+      requests:
+        cpu: 50m
+        memory: 128Mi
    replicas:
       min: 1
       max: 1
