Build using java10, and use system cert to avoid pkix errors when fetching deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: required
 language: java
+jdk:
+- openjdk10
 services:
 - docker
 before_install:
@@ -8,6 +10,8 @@ before_install:
 - export PATH=`pwd`/github-apps-support/bin:$PATH
 - export INSTALLATION_TOKEN=$(generate-installation-token.sh `generate-jwt.sh ./travis/helseci.2018-10-26.private-key.pem
   $GITHUB_APP_ID`)
+- rm "${JAVA_HOME}/lib/security/cacerts"
+- ln -s /etc/ssl/certs/java/cacerts "${JAVA_HOME}/lib/security/cacerts"
 script:
 - make bump-version
 - make
