Added env vars for preprod

--- a/naiserator.yaml
+++ b/naiserator.yaml
@@ -34,3 +34,8 @@ spec:
     enabled: true
     path: /metrics
   secrets: true
+  env:
+    - name: KAFKA_BOOTSTRAP_SERVERS
+      value: b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00047.preprod.local:8443
+    - name: AKTORREGISTER_BASE_URL
+      value: https://app-q1.adeo.no/aktoerregister
