--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 language: java
 jdk:
-- openjdk10
+- openjdk11
 services:
 - docker
 before_install:
@@ -21,6 +21,7 @@ script:
 - "./gradlew build"
 - docker build --pull -t $DOCKER_IMG_NAME:$COMMIT_SHORT .
 - |
+  set -e
   if [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "${TRAVIS_BRANCH}" = "master" ]; then
     echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
     docker push $DOCKER_IMG_NAME:$COMMIT_SHORT
